2493 [Update]               fixed a crash in some situations if neroaacenc is enabled (regression of 2490)
2492 [Update]               fixed a crash on some systems without visual styles (regression of 2490)
2491 [Update]               added option to hide the question if you would like to update
2490 [Update]               added download progress indicator
     [Update]               added sortable columns
     [Update]               update data will only be refreshed every 1 (development) or 5 (stable) days
     [Update]               internal optimizations
2488 [x265]                 added --timinginfo switch in order to have fps information in the stream
2487 [Audio Encoder]        fixed TimeStretch support (regression of 2383)
     [Audio Encoder]        added dedicated TimeStretch options
     [Audio Encoder]        added 96000 Hz sample rate conversion. Feature request #538
     [Audio Encoder]        cosmetics
2486 [HD Streams Extractor] improved logging
2485 [QAAC]                 allow only specific TVBR values. Please verify your settings.
2484 [Video Preview]        if video preview is set to "always on top" some GUI elements were hidden. Bug #754
2483 [x264]                 improved error handling. Bug #755
2482 [AVI Muxer]            improved logging
2481 [MKV Muxer]            added HEVC support (requires mkvmerge 6.8.0+)
2480 [OneClick]             changed resize behaviour so that upsizing will be used if enabled
2479 [AVS Script Creator]   reverted Yadif back to Load_Stdcall_Plugin (regression of 2471)
2478 [HD Streams Extractor] last used open mode will be preselected
     [HD Streams Extractor] fixed using wrong source file in file mode if more than one job is added with "and close" disabled
2477 [Update]               fixed sometimes not possible to enable packages
     [Update]               improved default update selection logic
     [Update]               fixed sometimes not processing all packages