@@ -1,3 +1,6 @@
+2496 [MainForm]             enabled Drag & Drop for folders
+2495 [x265]                 introduced fastdecode & zerolatency tunings
+2494 [x265]                 removed --timinginfo switch. frame rate information is handled automatically now.
 2493 [Update]               fixed a crash in some situations if neroaacenc is enabled (regression of 2490)
 2492 [Update]               fixed a crash on some systems without visual styles (regression of 2490)
 2491 [Update]               added option to hide the question if you would like to update
